scss/components/_flexboxGrid.scss
.container {
	@include mq($large) {
		margin: 0;
	}
}

.card {
	max-width: 100%;
	margin: em(12);

	@include mq($large) {
		margin: em(64) em(120);
	}

	@include mq($x-x-large) {
		margin: em(64) em(220);
	}
}

.wrapper {
	padding: em(6) 0;
	background: rgb(255, 118, 27);
	background: linear-gradient(153deg, rgba(255, 118, 27, 1) 0%, rgba(51, 0, 255, 1) 100%);
	background-attachment: fixed;
	background-size: cover;
}

.grid__col--about {
	margin-left: auto;
	margin-right: auto;
	margin-bottom: em(48);

	@include mq($medium) {
		flex-direction: row;
		width: 65%;
		flex-wrap: wrap;
		justify-content: space-between;
		align-content: center;
	}

	@include mq($x-large) {
		width: 65%;
		flex-direction: row;
		flex-wrap: wrap;
		justify-content: space-between;
		align-content: center;
	}
}

.grid__col--store {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: stretch;
	width: 100%;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: em(48);
	margin-top: em(48);

	@include mq($medium) {
		flex-direction: row;
		width: 80%;
		flex-wrap: wrap;
		justify-content: space-between;
		align-content: center;
		align-items: stretch;
	}

	@include mq($x-large) {
		width: 65%;
		flex-direction: row;
		flex-wrap: wrap;
		justify-content: space-between;
		align-content: center;
		align-items: stretch;
	}
}

.grid__col--proj,
.grid__col--skills {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	width: 100%;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: em(48);
	margin-top: em(48);

	@include mq($medium) {
		flex-direction: column;
		width: 80%;
		flex-wrap: wrap;
		justify-content: space-between;
		align-content: center;
		align-items: center;
	}

	@include mq($x-large) {
		width: 65%;
		flex-direction: row;
		flex-wrap: wrap;
		justify-content: space-between;
		align-content: center;
		align-items: center;
	}
}

.grid__col--proj ul {
	@include mq($large) {
		display: flex;
		align-items: center;
		justify-content: center;
		margin: 0 auto;
		flex-wrap: wrap;
	}
}

.project-tile {
	flex: 1 50%;
	padding: em(12);
	margin: em(12) auto;
	// border-radius: 24px;
}

.project-tile:hover .image--frame {
	opacity: 0;
}

.project-tile:hover .overlay {
	opacity: 1;
}

.project-photo {
	position: relative;
}

.skills--card {
	padding: em(12);
	margin: em(12);
	flex: 1 31%;
	width: 60%;
	border: solid 2px white;
	transition: .4s;
	border-radius: em(6);
}

.skills--card__store {
	padding: em(6);
	margin: em(12);
	flex: 1 22%;
	transition: .4s;
	border: solid 2px white;
	border-radius: em(6);

}

.skills--card:hover {
	@include mq($large) {
		transform: scale(1.1);
	}
}

.skills--card__store:hover {
	@include mq($large) {
		transform: scale(1.1);
	}
}

.grid__row {
	@extend %flexbox;
}

.contact-info li {
	@include mq($medium) {
		display: inline-block;
		margin: em(18);
	}
}

.overlay {
	color: white;
	font-size: 24px;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	background: rgba(0, 0, 0, .65);
	transition: .5s ease;
	opacity: 0;
	position: absolute;
	height: 100%;
	width: 100%;
	top: 50%;
	left: 50%;
	border-radius: 24px;
	transform: translate(-50%, -50%);
	-ms-transform: translate(-50%, -50%);
	text-align: center;
}

@include grid__col;

